# LLM_code_benchmark

./: .artifact-hygiene-allowlist.txt  .bandit.yml  .env.example  .gitignore  .gitleaks.toml  .hadolint.yaml  .hardcoded-values-allowlist.txt  .license-policy.txt  .pip-audit-suppressions.txt  .pre-commit-config.yaml  .semgrep-suppressions.txt  .semgrep.yml  .trivyignore  .vulture  .vulture-allowlist.py  AGENTS.md  README.md  SECURITY_AUDIT_REPORT.md  code-base-enhacement-recommendations.md  conftest.py  progress.txt  pyproject.toml  pytest.ini  requirements-dev.in  requirements-dev.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: claude-code-review.yml  claude.yml  codeql.yml  nightly-deep-scans.yml  ossf-scorecard.yml  quality-gates.yml  secret-scanning.yml  slsa-provenance.yml
.hypothesis/constants/: 0964c024605c1123  0cb84868eaf6a67c  113728321995b55e  120c7e8b4aff78da  16b6c4ba1d8c58cf  1b15d947c7f4bcd9  1bc8fcab5d4cf6e1  1c7441d1b28773cc  380c9cd2e6ab3457  45870f7ee5806a17  476e0e8bc5f3b979  5ba3ccc3028ddc55  645e0f554f263334  6692d40fc86cebe8  792259e301684512  8fc16b0d5439878b  95b02cb1a86b7114  a885e7bad31766f9  b50b9aad3443af27  b55e30d66952bd65  ea5bfc3dae240c1e  f45f81379a4f47c3  f49a3ed05c202002  f4c1f7624ed32ef4  f7cebb0513e22841  f8fd46f38a583e4b  fb5f5e68ff8a6830
docs/: BANDIT.md  BRANCH_PROTECTION.md  DEVELOPMENT.md  LICENSE-POLICY.md  OPENAPI-DIFF.md  SBOM.md  SECURITY.md  SEMGREP.md  SIGSTORE.md  SLSA-PROVENANCE.md  WORKFLOW-PERMISSIONS.md  go_toolchain_setup.md  gui.md  license-inventory.txt  openapi-snapshot.json  tool_calling_strategy.md
gui/: components.js  index.html  main.js  model-source.js  run.html  run.js  style.css  task-language.js
gui/qa/: index.html  main.js
harness/: README.md  __init__.py  async_client.py  config.py  exceptions.py  http_utils.py  requirements.in  requirements.txt  run_harness.py  secure_execution.py
harness/examples/: go_bugfix_interval_overlap_patch.txt  go_feature_todo_service_patch.txt  go_feature_wordcount_patch.txt  javascript_bugfix_titlecase_patch.txt  javascript_feature_cli_todo_patch.txt  javascript_feature_wait_for_patch.txt  python_bugfix_interval_overlap_patch.txt  python_bugfix_prime_checker_patch.txt  python_feature_batched_iterator_patch.txt  python_feature_cli_reporter_patch.txt  python_feature_moving_average_patch.txt  python_tool_weather_cli_patch.txt  rust_bugfix_prime_checker_patch.txt  rust_feature_chunk_iter_patch.txt  rust_feature_config_parser_patch.txt  sample_bug_fix_patch.txt
harness/expert_questions/: __init__.py  dataset.py  run_benchmark.py
harness/tests/: test_expert_questions_answer_extraction.py  test_expert_questions_openrouter_reasoning_budget.py  test_secure_execution.py
migrations/: README.md  env.py
plans/: ralph.sh  requirements.json
scripts/: .webui_secret_key  actionlint.sh  bandit.sh  benchmark.sh  bootstrap.sh  check-artifact-hygiene.sh  check-branch-protection.sh  check-console-log.sh  check-deps.sh  check-env-example-secrets.sh  check-env-example.sh  check-frontend.sh  check-hardcoded-values.sh  check-hashes.sh  check-pinned-actions.sh  check-python-version.sh  compile-deps.sh  devserver.sh  devserver_qa.sh  diff-cover.sh  e2e-test.sh  format.sh  gui-smoke.sh  hadolint.sh  license-scan.sh  lint.sh  openapi-diff.sh  openapi-fuzz.sh  openapi-validate.sh  sbom.sh  security-scan.sh  semgrep.sh  shellcheck.sh  sign-artifacts.sh  test.sh  trivy.sh  typecheck.sh
server/: __init__.py  api.py  caching.py  config.py  database.py  database_utils.py  logging.py  monitoring.py  path_security.py  progress.py  progress_base.py  qa_database.py  qa_progress.py  redaction.py  request_limits.py  requirements.in  requirements.txt  security_headers.py  validators.py
server/api/: __init__.py  router.py
server/infrastructure/: __init__.py  cache.py  caching.py  database.py
server/routes/: __init__.py  auth.py  background.py  qa_router.py  router.py
tasks/: catalog.json
tasks/cpp_expert_sparse_matrix/: instructions.md  metadata.json
tasks/cpp_expert_thread_pool/: instructions.md  metadata.json
tasks/go_bugfix_interval_overlap/: instructions.md  metadata.json
tasks/go_expert_lru_cache/: instructions.md  metadata.json
tasks/go_expert_scheduler/: instructions.md  metadata.json
tasks/go_expert_token_bucket/: instructions.md  metadata.json
tasks/go_feature_todo_service/: instructions.md  metadata.json
tasks/go_feature_wordcount/: instructions.md  metadata.json
tasks/html_expert_form_validator/: instructions.md  metadata.json
tasks/html_expert_heatmap_renderer/: instructions.md  metadata.json
tasks/javascript_bugfix_titlecase/: instructions.md  metadata.json
tasks/javascript_expert_markdown_toc/: instructions.md  metadata.json
tasks/javascript_expert_promise_pool/: instructions.md  metadata.json
tasks/javascript_expert_worker_scheduler/: instructions.md  metadata.json
tasks/javascript_feature_cli_todo/: instructions.md  metadata.json
tasks/javascript_feature_wait_for/: instructions.md  metadata.json
tasks/python_bugfix_interval_overlap/: instructions.md  metadata.json
tasks/python_bugfix_prime_checker/: instructions.md  metadata.json
tasks/python_expert_async_cache/: instructions.md  metadata.json  requirements.txt
tests/: __init__.py  test_api_contracts.py  test_api_endpoints.py  test_auth.py  test_auth_permission_matrix.py  test_benchmarks.py  test_cli_entrypoints.py  test_critical_paths.py  test_database_utils.py  test_dataset.py  test_external_endpoint_config.py  test_gui_smoke.py  test_harness_metadata.py  test_harness_patch_parser_fuzz.py  test_harness_retry_resume.py  test_harness_server_e2e.py  test_integration.py  test_log_redaction.py  test_migrations_smoke.py  test_path_security.py  test_path_traversal_regression.py  test_progress.py  test_progress_stress.py  test_qa_router.py  test_request_limits.py  test_security_headers.py  test_server_config.py  test_ui_static_assets.py  test_validator_script_portability.py  test_validators.py  test_websocket_streams.py
(+659 files in other folders)
